# cado-nfs-3.0.0-modern

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  cado-nfs-client.py  cado-nfs.py  local.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/release-notes/: v3.1.0-modern.md
.github/workflows/: avx512-validate.yml  ci.yml
bench/: gpu-cofac-128-bench.sh  gpu-ecm-edwards.cu  gpu-ecm-mp.cu  gpu-lingen-ntt-crt-c6plus.cu  gpu-lingen-ntt.cu  gpu-research-v340-validate.sh  gpu-ropt-stage2.cu  gpu-ropt-threshold-c5plus.cu  gpu-spmv-bench.cu  gpu-xdotprod-bench.cu  ifma-modmul.c  ifma-validate.sh
bench/harness/: README.md  collect-v320.sh  cpu-sweep.sh  gpu-standalone.sh  hd.sh  hdrtest.c  hdrtest_pclmul.c  iso.sh  parse.sh
bench/results/: README.md  cpu-factorization-sweep.txt  v3.2.0-benchmarks.txt
config/: mpi.cmake
docs/: ROADMAP-v3.2.0-modern.md  ROADMAP-v3.3.0-modern.md  galois-auto-a5.md  gpu-cofactorization.md  gpu-ecm-mixedrep.md  gpu-linalg.md  gpu-lingen-ntt-c6.md  gpu-polyselect-ropt-c5.md  gpu-prefactor.md  multinode-residency-d2.md  number-field-sieve.md  rust-orchestration.md  usability-v330.md  usability-v340.md
gf2x/lowlevel/: gen_bb_mul_code.c
linalg/bwc/: cpubinding.cpp  krylov.cpp  matmul-gpu-hooks.h  matmul-gpu.cu  matmul.hpp  matmul_top.cpp  matmul_top_comm.cpp  matmul_top_comm.hpp  mksol.cpp  secure.cpp  xdotprod.cpp
misc/: CMakeLists.txt
misc/completions/: cado-nfs.bash  cado-nfs.fish  cado-nfs.zsh
misc/gpu_prefactor/: README.md  gpu-prefactor.cu
misc/man/: cado-nfs.1
rust/: Cargo.toml  interop-test.sh  robustness-test.sh  server-swap-tls-test.sh
rust/cado-nfs-client/: Cargo.toml
rust/cado-nfs-client/src/: main.rs
rust/cado-wu-server/: Cargo.toml
rust/cado-wu-server/src/: main.rs
scripts/: build-completions.py  cluster-launch.sh
scripts/cadofactor/: api_server.py  cadotask.py  doctor.py  external_api_server.py  galois.py  notify.py  planner.py  runs.py  status.py  toplevel.py  wizard.py  wudb.py  wuserver.py
sieve/: las-cofac-standalone.cpp  las-cofac-standalone.hpp  las-cofactor.cpp  las-cofactor.hpp  las-process-bucket-region.cpp
sieve/ecm/: gpu_cofac.cpp  gpu_cofac.hpp  gpu_ecm.cu  gpu_ecm.hpp  gpu_ecm_stub.cpp
tests/scripts/cadofactor/: CMakeLists.txt
